<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="dummy_section_text">Section %1d is just a dummy section.</string>

    <string name="demo_external_activity">Demo External Activity</string>
    <string name="demo_collection">Demo Collection</string>


    <string name="app_name">Deadline</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="sunday">Sun</string>
    <string name="monday">Mon</string>
    <string name="thesday">Tue</string>
    <string name="wednesday">Wed</string>
    <string name="thursday">Thu</string>
    <string name="friday">Fri</string>
    <string name="saturday">Sat</string>
    <string name="title_activity_main3">Main3Title</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main4">Main4Activity</string>

</resources>
